--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,40 +1,18 @@
-.App {
-  text-align: center;
-  /* background-color: #282c34; */
-
+* {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__header{
+  object-fit: contain; /*Maintain Aspect Ratio */
+  padding: 20px;
+  background-color: #fafafa;
+  border-bottom: 1px solid #EFEFEF;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+
+  background-color: #ffffff;
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
