--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,46 +1,53 @@
 .navbar {
-    height: 100%;
-    padding: 0 1rem;
-
+  height: 76px;
+  padding: 0 1rem;
+  background: linear-gradient(
+    90deg,
+    rgb(197, 197, 197) 0%,
+    rgb(192, 192, 192) 100%
+  );
+  display: flex;
+  align-items: center;
+  position: sticky;
 }
 
-.navbar__nav {
-    max-width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex;
+.navbar__container {
+  max-width: 100%;
+  /* height: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav__item {
-    /* width: calc(var(--nav__size)*.9); */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 165px;
-    max-width: 225px;
-    cursor: pointer;
-    
+  /* width: calc(var(--nav__size)*.9); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 165px;
+  max-width: 225px;
+  cursor: pointer;
 }
 
 .nav__item__text {
-    color: rgb(197, 197, 197);
-    font-size: 14px;
-    font-family: var(--tds-sans-font_stack--medium);
-    padding: 20px 0;
-    margin: 0;
-    display: inline-block;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  color: rgb(197, 197, 197);
+  font-size: 14px;
+  font-family: var(--tds-sans-font_stack--medium);
+  padding: 20px 0;
+  margin: 0;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    transition: filter 300ms;
+  transition: filter 300ms;
 }
 
 .nav__item__text:hover {
-    filter: brightness(1.2);
-    color: #000;
+  filter: brightness(1.2);
+  color: #000;
 }
 
 .nav__item__text span {
-    font-weight: 500;
+  font-weight: 500;
 }
