--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,37 +1,33 @@
 .post__container {
-    max-width: 85vw;
-    min-width: 200px;
-    background-color: #ffffff;
-    border: 1px solid lightgray;
-    /* margin-left: 20px; */
-    /* margin-bottom: 35px; */
-    margin: 20px 0 35px 20px;
+  max-width: 85vw;
+  min-width: 200px;
+  background-color: #ffffff;
+  border: 1px solid lightgray;
+  /* margin-left: 20px; */
+  /* margin-bottom: 35px; */
+  margin: 20px 0 35px 20px;
 
-    /* filter: drop-shadow(0 0 20px #000000); */
-    /* filter: drop-shadow(0 0 30px #333); */
-    box-shadow: 8px 8px 10px #e0e0e0, -2px -2px 15px #ffffff;
-    
+  /* filter: drop-shadow(0 0 20px #000000); */
+  /* filter: drop-shadow(0 0 30px #333); */
+  box-shadow: 8px 8px 10px #e0e0e0, -2px -2px 15px #ffffff;
 }
 
 .post__header {
-    padding: .5rem;
-    display: flex;
-    
-    
+  padding: 0.5rem;
+  display: flex;
 }
 
 .post__Avatar {
-    margin-right: .4rem;
+  margin-right: 0.4rem;
 }
 
 .post__image {
-    object-fit: contain;
-    width: 100%;
-    border-top: 1px solid #EFEFEF;
-    border-bottom: 1px solid #EFEFEF;
-    transition: all 0.3s ease-out;
-    overflow: hidden;
-
+  object-fit: contain;
+  width: 100%;
+  border-top: 1px solid #efefef;
+  border-bottom: 1px solid #efefef;
+  transition: all 0.3s ease-out;
+  overflow: hidden;
 }
 /* 
 .post__image:hover {
@@ -39,7 +35,6 @@
 } */
 
 .post__text {
-    
-    object-fit: contain;
-    padding: 2rem;
+  object-fit: contain;
+  padding: 2rem;
 }
